--- a/Facebook_DataDrivenFramework/report/index.html
+++ b/Facebook_DataDrivenFramework/report/index.html
@@ -51,7 +51,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">18/09/2021 13:47:01</span>
+                    <span class="badge badge-primary">18/09/2021 14:07:41</span>
                 </a>
             </li>
         </ul>
@@ -121,8 +121,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">Tests</p> 
-								<p class="duration text-sm">0h:0m:8s+911ms</p> 
-								<span class="datetime">13:47:06 PM</span>
+								<p class="duration text-sm">0h:0m:11s+466ms</p> 
+								<span class="datetime">14:07:46 PM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -130,9 +130,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">Tests</h5>
-										<span class='badge badge-success'>18/09/2021 13:47:06</span>
-										<span class='badge badge-danger'>18/09/2021 13:47:15</span>
-										<span class='badge badge-default'>0h:0m:8s+911ms</span>
+										<span class='badge badge-success'>18/09/2021 14:07:46</span>
+										<span class='badge badge-danger'>18/09/2021 14:07:57</span>
+										<span class='badge badge-default'>0h:0m:11s+466ms</span>
 									</div>
 																	</div>
 							</div>
@@ -147,13 +147,13 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>13:47:06</td>
+				<td>14:07:46</td>
 				<td>
-Automating Spotify Login PAge									</td>
+Automating ajio Login PAge									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>13:47:15</td>
+				<td>14:07:57</td>
 				<td>
 Test PAsses									</td>
 			</tr>
@@ -232,7 +232,7 @@ Test PAsses									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">18/09/2021 13:47:01</h6>
+							<h6 class="font-weight-light">18/09/2021 14:07:41</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -248,7 +248,7 @@ Test PAsses									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:14.0040614</h6>
+							<h6 class="font-weight-light">00:00:16.2603768</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -264,7 +264,7 @@ Test PAsses									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<p class="">Duration</p>
-							<h6 class="font-weight-light">00:00:24.1095158</h6>
+							<h6 class="font-weight-light">00:00:27.3485615</h6>
 							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
