--- a/Facebook_DataDrivenFramework/report/index.html
+++ b/Facebook_DataDrivenFramework/report/index.html
@@ -51,7 +51,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">20/09/2021 09:57:35</span>
+                    <span class="badge badge-primary">05/10/2021 11:12:35</span>
                 </a>
             </li>
         </ul>
@@ -121,8 +121,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">Tests</p> 
-								<p class="duration text-sm">0h:0m:12s+939ms</p> 
-								<span class="datetime">09:57:42 AM</span>
+								<p class="duration text-sm">0h:0m:21s+064ms</p> 
+								<span class="datetime">11:12:38 AM</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -130,9 +130,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">Tests</h5>
-										<span class='badge badge-success'>20/09/2021 09:57:42</span>
-										<span class='badge badge-danger'>20/09/2021 09:57:55</span>
-										<span class='badge badge-default'>0h:0m:12s+939ms</span>
+										<span class='badge badge-success'>05/10/2021 11:12:38</span>
+										<span class='badge badge-danger'>05/10/2021 11:13:00</span>
+										<span class='badge badge-default'>0h:0m:21s+064ms</span>
 									</div>
 																	</div>
 							</div>
@@ -147,13 +147,19 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-info text-info"></i></td>
-				<td>09:57:42</td>
+				<td>11:12:38</td>
 				<td>
-Automating facebook Login PAge									</td>
+Automating facebook and uploading photo									</td>
+			</tr>
+			<tr class="event-row">
+				<td><i class="fa fa-info text-info"></i></td>
+				<td>11:13:00</td>
+				<td>
+ScreenShot					<img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='C:\Users\girish.v\source\repos\Facebook_DataDrivenFramework\Facebook_DataDrivenFramework\screenshot\text2.png' src='C:\Users\girish.v\source\repos\Facebook_DataDrivenFramework\Facebook_DataDrivenFramework\screenshot\text2.png' data-src='C:\Users\girish.v\source\repos\Facebook_DataDrivenFramework\Facebook_DataDrivenFramework\screenshot\text2.png'>				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>09:57:55</td>
+				<td>11:13:00</td>
 				<td>
 Test PAsses									</td>
 			</tr>
@@ -232,7 +238,7 @@ Test PAsses									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">20/09/2021 09:57:35</h6>
+							<h6 class="font-weight-light">05/10/2021 11:12:35</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -248,7 +254,7 @@ Test PAsses									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:19.9615536</h6>
+							<h6 class="font-weight-light">00:00:24.8886634</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -264,7 +270,7 @@ Test PAsses									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<p class="">Duration</p>
-							<h6 class="font-weight-light">00:00:33.1367259</h6>
+							<h6 class="font-weight-light">00:00:29.8953566</h6>
 							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
